# ChangeLog for x11-misc/gxneur
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Feb 2011; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
  -gxneur-0.11.1.ebuild, +gxneur-0.12.0.ebuild:
  Version bump.

  06 Dec 2010; Peter Volkov <pva@gentoo.org> -gxneur-0.10.0.ebuild,
  +gxneur-0.11.1.ebuild:
  Version bump, thank nightwelf and Alex Rodionov for report/help.

  17 Oct 2010; Peter Volkov <pva@gentoo.org> -gxneur-0.9.9.ebuild,
  +gxneur-0.10.0.ebuild:
  Version bump, thank Павел aka Nightwelf for report.

  06 Jul 2010; Michał Górny (sedzimir) <mgorny.3ehbo@mailnull.com>
  gxneur-0.9.9.ebuild:
  Cleanup, install the icon.

  01 Jun 2010; Peter Volkov <pva@gentoo.org> -gxneur-0.9.7.ebuild,
  +gxneur-0.9.9.ebuild:
  Version bump, thank Alex Rodionov for report in bug #169494.

  16 Oct 2009; Peter Volkov <pva@gentoo.org>
  -files/gxneur-0.9.3-CFLAGS.patch, -gxneur-0.9.5.ebuild,
  +gxneur-0.9.7.ebuild:
  Version bump. Patch finally went upstream.

  26 Aug 2009; Peter Volkov <pva@gentoo.org>
  files/gxneur-0.9.3-CFLAGS.patch, -gxneur-0.9.4.ebuild,
  +gxneur-0.9.5.ebuild:
  Version bump.

  01 Jun 2009; Peter Volkov <pva@gentoo.org> -gxneur-0.9.3.ebuild,
  +gxneur-0.9.4.ebuild:
  Version bump.

  06 Apr 2009; Peter Volkov <pva@gentoo.org> gxneur-0.9.3.ebuild:
  Make eutils/versionator eclass globally inherited, thank Tommy for catching
  this.

  03 Apr 2009; Peter Volkov <pva@gentoo.org> +gxneur-0.9.3.ebuild,
  +files/gxneur-0.9.3-CFLAGS.patch, +metadata.xml:
  New Ebuild for bug 169494.
