@@ -1,4 +1,3 @@
-DIST gxneur-0.12.0.tar.bz2 397357 RMD160 c0b60c9ebc9be2c12dd24165bc1c893f828eac08 SHA1 281b52dae303035f5fc8bb808c38d7fa97545f4f SHA256 ef5d337cd9a79ccb07a0d84248ba6088608642978897484b547065bac9d344d2
-EBUILD gxneur-0.12.0.ebuild 991 RMD160 590fccc74f1a896338b979e89e7aa2cba10dddee SHA1 a2f81d87129c4dedceed4c270c55a279a8bf4b5d SHA256 565fffa58a578a09becc00b46ba2dc2aa5f9a06373da3fe80ad7fb60c6f1a55e
-MISC ChangeLog 1566 RMD160 31fc59f13f6a4b5eafbcd89627805db7471b5da0 SHA1 6ebeedba02001ec47997f62d5328312dbd9fe4b8 SHA256 17e397750b75aca407e1f846ae64a40e86ec8685a9d8d519b34c290260a39a25
-MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
+DIST gxneur-0.15.0.tar.bz2 682903 RMD160 f6c07cf0ec5a499bd7dc2809f8b7ae95aadd3661 SHA1 013f7f0b35359e9da55132b7c588cfcead1f3316 SHA256 4fda25f0b3f90d6b76aa731bcc1768c606af1cbdba59e82400baa83d2ea9866d
+EBUILD gxneur-0.15.0.ebuild 1197 RMD160 f7b68704d9432d895d8f1266231af59fcfcf9189 SHA1 9c98bb3a76eca34461b937e1f206e419d14e0b5b SHA256 d9c3b436685cea2dded090752d9493f1d2493ffc7684006c6c5659db8bda021c
+MISC ChangeLog 1740 RMD160 2110bd5a3b41c390082cec86d0a7037c7aad743b SHA1 c856bbaa73cff6b1d94c6393f92500ea80c88dbb SHA256 b0b25904a3d84b50a68aace362ec2d63455f454207f99162006d3db5759de012
