@@ -1,10 +1,10 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=2
+EAPI=4
 
-inherit autotools eutils versionator
+inherit autotools eutils gnome2-utils versionator
 
 DESCRIPTION="GTK+ based GUI for xneur"
 HOMEPAGE="http://www.xneur.ru/"
@@ -13,12 +13,14 @@ SRC_URI="http://dists.xneur.ru/release-${PV}/tgz/${P}.tar.bz2"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="nls"
+IUSE="+gconf nls"
 
-COMMON_DEPEND=">=gnome-base/libglade-2.6.0
+COMMON_DEPEND="gnome-base/libglade:2.0
 	>=sys-devel/gettext-0.16.1
 	>=x11-libs/gtk+-2.18:2
-	>=x11-misc/xneur-$(get_version_component_range 1-2)"
+	>=x11-misc/xneur-$(get_version_component_range 1-2)
+	gconf? ( gnome-base/gconf:2 )
+	!x11-misc/xneur[gtk3]"
 RDEPEND="${COMMON_DEPEND}
 	nls? ( virtual/libintl )"
 DEPEND="${COMMON_DEPEND}
@@ -33,11 +35,25 @@ src_prepare() {
 }
 
 src_configure() {
-	econf $(use_enable nls)
+	econf \
+		$(use_enable nls) \
+		$(use_with gconf)
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die
-	dodoc AUTHORS ChangeLog NEWS || die
-	doicon pixmaps/gxneur.png || die
+	emake DESTDIR="${D}" install
+	dodoc AUTHORS ChangeLog NEWS
+	doicon pixmaps/gxneur.png
+}
+
+pkg_preinst() {
+	gnome2_icon_savelist
+}
+
+pkg_postinst() {
+	gnome2_icon_cache_update
+}
+
+pkg_postrm() {
+	gnome2_icon_cache_update
 }
