@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/gxneur
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*gxneur-0.15.0 (27 Jan 2012)
+
+  27 Jan 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -gxneur-0.12.0.ebuild, +gxneur-0.15.0.ebuild, -metadata.xml:
+  version bump
 
   01 Feb 2011; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
   -gxneur-0.11.1.ebuild, +gxneur-0.12.0.ebuild:
